# SlimValue

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  slim_common_lib.pc.in  slim_header_lib.pc.in
cmake/: slimvalue.pc.in
include/slim/: SlimValue.hpp  SlimValue.hpp.in
tests/: anyvalue_tests.cpp  errorinfo_tests.cpp  slim_tests.cpp  slimmap_tests.cpp  slimvalue_tests.cpp  test_slimvalue.cpp
