cmake_minimum_required(VERSION 3.20)

cmake_path(GET CMAKE_SOURCE_DIR FILENAME SLIM_LIB)
string(TOLOWER "${SLIM_LIB}" SLIM_LIB_LOWER)

if(DEFINED CPACK_OUTPUT_FILE_PREFIX)
    if("${CPACK_OUTPUT_FILE_PREFIX}" STREQUAL ".")
	    set(CPACK_OUTPUT_FILE_PREFIX ${CMAKE_SOURCE_DIR})
    endif()
else()
	message(FATAL_ERROR "CPACK_OUTPUT_FILE_PREFIX is not set")
endif()

include(FetchContent)

set(SLIM_USE_LOCAL_SOURCE OFF CACHE BOOL "Use local library source instead of git")

if(SLIM_USE_LOCAL_SOURCE)
    set(GIT_TAG 0.0.0)
    set(SLIMLIB_GIT_HASH "none")
else()
    execute_process(
        COMMAND git ls-remote --tags --sort=-v:refname https://github.com/greergan/${SLIM_LIB}.git
        OUTPUT_VARIABLE TAGS_RAW
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    string(REGEX MATCH "refs/tags/([^\\^\\n]+)" _ "${TAGS_RAW}")
    set(GIT_TAG ${CMAKE_MATCH_1})
endif()

if(SLIM_USE_LOCAL_SOURCE)
    set(slimlibrarysrc_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
    message(STATUS "using LOCAL source (${slimlibrarysrc_SOURCE_DIR})")
else()
    FetchContent_Declare(
        SlimLibrarySrc
        GIT_REPOSITORY https://github.com/greergan/${SLIM_LIB}.git
        GIT_TAG        ${GIT_TAG}
    )

    message(STATUS "using GIT source (tag: ${GIT_TAG})")
    message(STATUS "fetched from https://github.com/greergan/${SLIM_LIB}.git")

    FetchContent_Populate(SlimLibrarySrc)

    execute_process(
        COMMAND git rev-parse --short HEAD
        OUTPUT_VARIABLE SLIMLIB_GIT_HASH
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )
endif()

project(${SLIM_LIB} VERSION ${GIT_TAG} LANGUAGES CXX)
set(SLIMLIB_CXX_STANDARD 23)

if(${SLIM_LIB} MATCHES "^SlimCommon")
    string(REGEX REPLACE "^SlimCommon" "" SLIM_COMMON_SUFFIX "${SLIM_LIB}")
    string(REGEX REPLACE "([A-Z])" "/\\1" SLIM_COMMON_PATH "${SLIM_COMMON_SUFFIX}")
    string(TOLOWER "${SLIM_COMMON_PATH}" SLIM_COMMON_PATH)
    string(REGEX REPLACE "^/" "" SLIM_COMMON_PATH "${SLIM_COMMON_PATH}")
    string(REGEX MATCH "[^/]+$" HEADER_FILE_PREFIX "${SLIM_COMMON_PATH}")
    string(REGEX REPLACE "/[^/]+$" "" SLIM_COMMON_PARENT "${SLIM_COMMON_PATH}")
    if(SLIM_COMMON_PARENT STREQUAL SLIM_COMMON_PATH)
        set(SLIM_INCLUDE_DIR "include/slim/common")
    else()
        set(SLIM_INCLUDE_DIR "include/slim/common/${SLIM_COMMON_PARENT}")
    endif()
else()
    string(REGEX REPLACE "^slim" "" HEADER_FILE_PREFIX "${SLIM_LIB_LOWER}")
    set(SLIM_INCLUDE_DIR "include/slim")
endif()
set(SLIM_METADATA_FILE_OUT "${SLIM_LIB_LOWER}.pc")

set(HPP_IN_FILE "${slimlibrarysrc_SOURCE_DIR}/${SLIM_INCLUDE_DIR}/${SLIM_LIB}.hpp.in")
set(H_IN_FILE "${slimlibrarysrc_SOURCE_DIR}/${SLIM_INCLUDE_DIR}/${HEADER_FILE_PREFIX}.h.in")

set(HPP_OUT_FILE "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_INCLUDE_DIR}/${SLIM_LIB}.hpp")
set(H_OUT_FILE "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_INCLUDE_DIR}/${HEADER_FILE_PREFIX}.h")

set(HPP_HEADER_ONLY OFF)

if(EXISTS ${HPP_IN_FILE})
    set(HPP_HEADER_ONLY ON)
    set(SLIM_LIB_DESCRIPTION "${SLIM_LIB} header-only C++ library")
    set(SLIM_METADATA_FILE_IN "slim_header_lib.pc.in")
else()
    set(SLIM_LIB_DESCRIPTION "${SLIM_LIB} C++ library")
    set(SLIM_METADATA_FILE_IN "slim_common_lib.pc.in")
endif()

if(NOT SLIM_INCLUDE_DIR)
    message(FATAL_ERROR "empty SLIM_INCLUDE_DIR")
endif()
if(NOT HEADER_FILE_PREFIX)
    message(FATAL_ERROR "empty HEADER_FILE_PREFIX")
endif()
if(NOT SLIM_METADATA_FILE_OUT)
    message(FATAL_ERROR "empty SLIM_METADATA_FILE_OUT")
endif()

set(SLIMLIB_VERSION ${GIT_TAG})
set(SLIMLIB_VERSION_FULL "${SLIMLIB_VERSION}+${SLIMLIB_GIT_HASH}")

execute_process(
	COMMAND git config --get user.name
	OUTPUT_VARIABLE GIT_USER_NAME
	OUTPUT_STRIP_TRAILING_WHITESPACE
	ERROR_QUIET
)

if(NOT GIT_USER_NAME)
	set(GIT_USER_NAME "unknown")
endif()

execute_process(
	COMMAND git config --get user.email
	OUTPUT_VARIABLE GIT_USER_EMAIL
	OUTPUT_STRIP_TRAILING_WHITESPACE
	ERROR_QUIET
)

if(NOT GIT_USER_EMAIL)
	set(GIT_USER_EMAIL "unknown")
endif()

message(STATUS "OS: ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_VERSION}")
message(STATUS "Processor: ${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "Project dir: ${CMAKE_SOURCE_DIR}")
message(STATUS "Build dir:   ${CMAKE_BINARY_DIR}")
message(STATUS "Dist dir: ${CPACK_OUTPUT_FILE_PREFIX}")
message(STATUS "Local INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "slim library name: ${SLIM_LIB}")
message(STATUS "slim include path: ${SLIM_INCLUDE_DIR}")
if(HPP_HEADER_ONLY)
    message(STATUS "install .hpp only: ${HPP_HEADER_ONLY}")
    message(STATUS ".hpp.in file: ${HPP_IN_FILE}")
    message(STATUS ".hpp file: ${HPP_OUT_FILE}")
endif()
# Compiler flags
set(SLIM_CXX_FLAGS "")

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang|AppleClang")
    list(APPEND SLIM_CXX_FLAGS
        -std=c++${SLIMLIB_CXX_STANDARD}
        -Wall
        -Wextra
        -Wpedantic
        -Wshadow
        -Wconversion
        -Wsign-conversion
    )
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        list(APPEND SLIM_CXX_FLAGS -g -O0)
    else()
        list(APPEND SLIM_CXX_FLAGS -O2 -DNDEBUG)
    endif()
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    list(APPEND SLIM_CXX_FLAGS
        /std:c++${SLIMLIB_CXX_STANDARD}
        /W4
        /WX-
        /permissive-
    )
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        list(APPEND SLIM_CXX_FLAGS /Od /Zi)
    else()
        list(APPEND SLIM_CXX_FLAGS /O2 /DNDEBUG)
    endif()
else()
    message(WARNING "Unknown compiler '${CMAKE_CXX_COMPILER_ID}' — no flags set")
endif()

list(JOIN SLIM_CXX_FLAGS " " SLIM_CXX_FLAGS_STR)
message(STATUS "Compiler:      ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
message(STATUS "CXX standard:  C++${SLIMLIB_CXX_STANDARD}")
message(STATUS "Build type:    ${CMAKE_BUILD_TYPE}")
message(STATUS "CXX flags:     ${SLIM_CXX_FLAGS_STR}")
message(STATUS "version tag: ${GIT_TAG}")
message(STATUS "version hash: ${SLIMLIB_GIT_HASH}")
message(STATUS "full version: ${SLIMLIB_VERSION_FULL}")
message(STATUS "Package maintainer: ${GIT_USER_NAME} <${GIT_USER_EMAIL}>")

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

if(HPP_HEADER_ONLY)
    configure_file("${HPP_IN_FILE}" "${HPP_OUT_FILE}" @ONLY)
else()
    configure_file("${H_IN_FILE}" "${H_OUT_FILE}" @ONLY)
endif()

if(NOT HPP_HEADER_ONLY)

add_library(slim_shared SHARED
    ${slimlibrarysrc_SOURCE_DIR}/src/main.cpp
)

# Fix #1: SOVERSION should be major version only, not full semver
string(REGEX MATCH "^([0-9]+)" SLIM_VERSION_MAJOR "${GIT_TAG}")

set_target_properties(slim_shared PROPERTIES
    OUTPUT_NAME ${SLIM_LIB_LOWER}
    VERSION     ${GIT_TAG}
    SOVERSION   ${SLIM_VERSION_MAJOR}
)

add_library(slim_static STATIC
    ${slimlibrarysrc_SOURCE_DIR}/src/main.cpp
)
set_target_properties(slim_static PROPERTIES OUTPUT_NAME ${SLIM_LIB_LOWER})

foreach(t slim_shared slim_static)
    target_include_directories(${t}
        PUBLIC
            $<BUILD_INTERFACE:${slimlibrarysrc_SOURCE_DIR}/include>
            $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
    )
    target_compile_options(${t} PUBLIC ${SLIM_CXX_FLAGS})
    # Keep this so consumers inherit the standard requirement via CMake's feature system
    target_compile_features(${t} PUBLIC cxx_std_${SLIMLIB_CXX_STANDARD})
endforeach()

add_library(slim ALIAS slim_shared)

add_custom_command(TARGET slim_shared POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E echo "Shared lib: $<TARGET_FILE_NAME:slim_shared>"
)

add_custom_command(TARGET slim_static POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E echo "Static lib: $<TARGET_FILE_NAME:slim_static>"
)

install(TARGETS slim_shared slim_static
    EXPORT SlimTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

endif() # NOT HPP_HEADER_ONLY

# Branch 1: src/test.cpp — always compiled when present
set(TEST_CPP "${CMAKE_CURRENT_SOURCE_DIR}/src/test.cpp")

if(EXISTS "${TEST_CPP}")
    add_executable(slim_test "${TEST_CPP}")
    target_compile_options(slim_test PRIVATE ${SLIM_CXX_FLAGS})
    if(HPP_HEADER_ONLY)
        target_include_directories(slim_test
            PRIVATE
                $<BUILD_INTERFACE:${slimlibrarysrc_SOURCE_DIR}/include>
                $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
        )
    else()
        target_link_libraries(slim_test PRIVATE slim_shared)
    endif()
    message(STATUS "Testing: with src/test.cpp")
    add_custom_command(TARGET slim_test POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E echo "Running slim_test..."
        COMMAND $<TARGET_FILE:slim_test>
        COMMENT "Running slim_test"
    )
else()
    message(STATUS "Testing: src/test.cpp not found, skipping")
endif()

# Branch 2: tests/ directory — Catch2, always checked
if(EXISTS "${slimlibrarysrc_SOURCE_DIR}/tests")
    message(STATUS "Catch2 Testing: enabled")

    file(GLOB_RECURSE SLIM_TEST_SOURCES "${slimlibrarysrc_SOURCE_DIR}/tests/*.cpp")

    FetchContent_Declare(
        Catch2
        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG v3.5.0
    )

    FetchContent_MakeAvailable(Catch2)

    enable_testing()

    add_executable(slim_tests ${SLIM_TEST_SOURCES})
    target_compile_options(slim_tests PRIVATE ${SLIM_CXX_FLAGS})
    if(HPP_HEADER_ONLY)
        target_include_directories(slim_tests
            PRIVATE
                $<BUILD_INTERFACE:${slimlibrarysrc_SOURCE_DIR}/include>
                $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
        )
    else()
        target_link_libraries(slim_tests PRIVATE slim)
    endif()

    target_link_libraries(slim_tests PRIVATE Catch2::Catch2WithMain)

    include(CTest)
    include(Catch)
    catch_discover_tests(slim_tests)

    add_custom_command(TARGET slim_tests POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E echo "Running slim_tests..."
        COMMAND $<TARGET_FILE:slim_tests>
        COMMENT "Running slim_tests"
    )
else()
    message(STATUS "Catch2 Testing: disabled (no tests directory found)")
endif()

string(REGEX REPLACE "^include/" "" SLIM_INSTALL_DIR "${SLIM_INCLUDE_DIR}")

if(HPP_HEADER_ONLY)
    install(FILES "${HPP_OUT_FILE}" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${SLIM_INSTALL_DIR})
else()
    install(FILES "${H_OUT_FILE}" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${SLIM_INSTALL_DIR})
endif()

if(NOT HPP_HEADER_ONLY)
    install(EXPORT SlimTargets
        FILE SlimTargets.cmake
        NAMESPACE Slim::
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${SLIM_LIB}
    )

    write_basic_package_version_file(
        "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_LIB}ConfigVersion.cmake"
        VERSION ${GIT_TAG}
        COMPATIBILITY AnyNewerVersion
    )

    file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_LIB}Config.cmake"
"include(\"\${CMAKE_CURRENT_LIST_DIR}/SlimTargets.cmake\")\n")

    install(FILES
        "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_LIB}Config.cmake"
        "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_LIB}ConfigVersion.cmake"
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${SLIM_LIB}
    )
endif()

configure_file(
    "${slimlibrarysrc_SOURCE_DIR}/${SLIM_METADATA_FILE_IN}"
    "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_METADATA_FILE_OUT}"
    @ONLY
)

install(FILES
    "${CMAKE_CURRENT_BINARY_DIR}/${SLIM_METADATA_FILE_OUT}"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" ARCH)
if(ARCH MATCHES "x86_64|amd64")
    set(ARCH_NAME "amd64")
elseif(ARCH MATCHES "i386|i686")
    set(ARCH_NAME "x86")
elseif(ARCH MATCHES "aarch64|arm64")
    set(ARCH_NAME "arm64")
elseif(ARCH MATCHES "armv7|arm")
    set(ARCH_NAME "arm")
else()
    set(ARCH_NAME "unknown")
endif()

set(CPACK_GENERATOR "DEB;RPM")

set(CPACK_PACKAGE_NAME ${SLIM_LIB_LOWER})
set(CPACK_PACKAGE_VERSION ${GIT_TAG})
set(CPACK_PACKAGE_CONTACT "${GIT_USER_NAME} <${GIT_USER_EMAIL}>")
set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}-${ARCH_NAME}")

set(CPACK_DEBIAN_PACKAGE_MAINTAINER ${GIT_USER_NAME})
set(CPACK_DEBIAN_PACKAGE_SECTION "devel")
set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${ARCH_NAME})
set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")

set(CPACK_RPM_PACKAGE_NAME ${SLIM_LIB_LOWER})
set(CPACK_RPM_PACKAGE_VERSION ${GIT_TAG})
set(CPACK_RPM_PACKAGE_RELEASE "1")
set(CPACK_RPM_PACKAGE_LICENSE "MIT")
set(CPACK_RPM_PACKAGE_GROUP "Development/Libraries")
set(CPACK_RPM_PACKAGE_SUMMARY ${SLIM_LIB_DESCRIPTION})
set(CPACK_RPM_PACKAGE_ARCHITECTURE ${ARCH_NAME})
set(CPACK_RPM_PACKAGE_PREFIX "${CMAKE_INSTALL_PREFIX}")

include(CPack)